desktop-themes/ContrastHigh/gtk-3.0/mate-applications.css
/************
 * Caja *
 ************/

.caja-cluebar-label {
    color: @theme_selected_fg_color;
    font: bold;
}

/* view and desktop mode */
.caja-canvas-item {
    border-radius: 3px;
    color: @theme_fg_color;
}

.caja-canvas-item:active,
.caja-canvas-item:selected {
    color: @theme_selected_fg_color;
}

.caja-notebook .caja-canvas-item,
CajaNavigationWindow.background .view.caja-canvas-item {
    color: @theme_fg_color;
}

.caja-notebook .caja-canvas-item:active,
.caja-notebook .caja-canvas-item:selected {
    color: @theme_selected_fg_color;
}

/* desktop mode */
/* 3.20 */
/* desktop */
.caja-desktop.caja-canvas-item {
    color: @theme_selected_fg_color;
    text-shadow: 1px 1px alpha (#000000, 0.8);
}

.caja-desktop.caja-canvas-item:selected {
    background-color: @theme_selected_bg_color;
    color: @theme_selected_fg_color;
    text-shadow: none;
}

.caja-desktop.caja-canvas-item:active,
.caja-desktop.caja-canvas-item:hover {
    text-shadow: none;
}

/* EelEditableLabel (icon labels) */
.caja-navigation-window .view .entry,
.caja-navigation-window .view .entry:focus,
.caja-desktop.view .entry,
.caja-desktop.view .entry:focus {
   border-image: none;
   border-style: solid;
   border-width: 1px;
   border-color: @theme_fg_color;
   box-shadow: none;
   border-radius: 2px;
   text-shadow: none;
   background-image: -gtk-gradient(linear,
                                   left top, left bottom,
                                   from       (shade(@theme_base_color, 0.86)),
                                   color-stop (0.15, shade(@theme_base_color, 0.96)),
                                   color-stop (0.50, shade(@theme_base_color, 0.98)),
                                   to         (shade(@theme_base_color, 1.00)));
}

.caja-desktop.view .entry:selected,
.caja-navigation-window .entry:selected {
    background-color: @theme_selected_bg_color;
    color: @theme_selected_fg_color;
}


/****************
 * Mate-Panel *
 ****************/

/* first make all transparent */
.mate-panel-menu-bar,
.mate-panel-menu-bar menubar,
.mate-panel-menu-bar menuitem,
#PanelApplet button,
PanelToplevel.background {
    background-color: transparent;
    background-image: none;
    border-color: transparent;
    box-shadow: none;
}

/* let's started */
/* the panel bar itself */
.mate-panel-menu-bar,
PanelToplevel.background {
    background-image: none;
    background-color: @theme_base_color;
    padding: 0;
    color: @theme_fg_color;
    text-shadow: none;
}

/* workaround to avoid unwanted black frames if switching compositor on/off */
.mate-panel-menu-bar .csd.popup decoration {
    box-shadow: none;
}

#PanelApplet {
    border-width: 0;
}

PanelSeparator {
    border-width: 0;
    background-image: none;
    color: @theme_fg_color;
    text-shadow: none;
}

/* the grid left from wnckpager and wncktasklist */
MatePanelAppletFrameDBus {
    background-image: -gtk-scaled(url("assets/panel-grid.svg"));
    background-color: transparent;
    background-repeat: no-repeat;
    background-position: left;
}

/* dictionary applet */
#PanelApplet entry {
    border-width: 1px;
    margin: 3px 0px;
}

/* most applets */
#PanelApplet button,
#PanelApplet button.flat,
#PanelApplet button.toggle
#PanelApplet button.flat.toggle {
    padding: 4px;
    border-radius: 0px;
    border-width: 0px;
    border-style: solid;
    text-shadow: none;
    color: @theme_fg_color;
    background-image: none;
    background-color: @theme_base_color;
}

#PanelApplet button:hover:active,
#PanelApplet button:checked,
#PanelApplet button:checked:hover,
#PanelApplet button.flat:hover:active,
#PanelApplet button.flat:checked,
#PanelApplet button.flat:checked:hover,
#PanelApplet button.toggle:hover:active,
#PanelApplet button.toggle:checked,
#PanelApplet button.toggle:checked:hover,
#PanelApplet button.flat.toggle:hover:active,
#PanelApplet button.flat.toggle:checked,
#PanelApplet button.flat.toggle:checked:hover{
    border-image: none;
    background-image: none;
    background-color: @theme_selected_bg_color;
    border-width: 0;
    border-radius: 0;
    color: @theme_selected_fg_color;
    text-shadow: none;
}

#PanelApplet button:hover,
#PanelApplet button.flat:hover,
#PanelApplet button.toggle:hover,
#PanelApplet button.flat.toggle:hover {
    border-image: none;
    background-image: none;
    background-color: @theme_fg_color;
    border-color: @theme_fg_color;
    color: @theme_selected_fg_color;
    border-width: 0;
    border-radius: 0;
}

#clock-applet-button.flat.toggle > box.horizontal > label {
    font: normal;
}

/* drivebutton */
#PanelApplet > grid > button,
#PanelApplet > grid > button:hover {
    padding: 4px;
}



ClockBox,
.mate-panel-menu-bar.menubar,
MatePanelApplet > GtkMenuBar.menubar {
    font: bold;
}

#PanelApplet.wnck-pager  {
    background-image: none;
    border-color: transparent;
    background-color: shade(@theme_base_color, 0.9);
    text-shadow: none;
}

/* selected WnckPager */
#PanelApplet.wnck-pager widget:selected {
    background-image: linear-gradient(to bottom,
                                      shade (@theme_bg_color, 0.46),
                                      shade (@theme_bg_color, 0.3));
    background-color: transparent;
    color: @theme_selected_fg_color;
}

/* hover of WnckPager */
#PanelApplet.wnck-pager widget:hover {
    background-image: linear-gradient(to bottom,
                                      shade (@theme_bg_color, 0.5),
                                      shade (@theme_bg_color, 0.66));
}

/* Classic icon style */
.mate-panel-menu-bar {
    -PanelMenuBar-icon-visible: true;
}

/* no background for icon-padding area */
GtkTrayIcon.background {
    background-color: transparent;
}

na-tray-applet {
    background-image: none;
    background-color: transparent;
    padding: 0;
    text-shadow: none;
    -NaTrayApplet-icon-padding: 4;
    -NaTrayApplet-icon-size: 16;
}

/* volume applet, brightness applet */
.mate-panel-applet-slider {
    background: transparent;
}

.mate-panel-applet-slider frame {
    background-color: @theme_bg_color;
    border-image: none;
    border-style: solid;
    border-radius:3px;
    padding: 0px;
    margin: 0px;
}

.mate-panel-applet-slider .frame frame {
    background-color:transparent;
    border-style: none;
    box-shadow: none;
}

.mate-panel-applet-slider frame button {
    padding: 4px 0px;
    margin: 0px;
}

/****************
 * Mate-Terminal *
 ****************/

.mate-terminal vte {
    -TerminalWindow-background-darkness: 0.95;
    background-color: shade (@theme_base_color, 0.95);
    color: @theme_fg_color;
}

/****************
 * Pluma *
 ****************/

/* pluma line numbers */
.pluma-window textview {
    background-color: shade (@theme_bg_color, 0.89);
    color: @theme_fg_color;
}

.pluma-window statusbar.horizontal frame,
.caja-window statusbar.horizontal frame {
    border-radius: 3px;
}

/* Pluma status bar */
.pluma-window statusbar.horizontal frame button.flat.toggle {
    border-radius: 3px;
    padding: 2px 5px;
}

/*******
 * Eom *
 *******/

.eom-window .vertical .vertical .vertical .horizontal button.flat:first-child {
    border-radius: 4px 0px 0px 4px;
    border-width: 2px 0px 2px 2px;
}

.eom-window .vertical .vertical .vertical .horizontal button.flat:last-child {
    border-radius: 0px 4px 4px 0px;
    border-width: 2px 2px 2px 0px;
}

.eom-window .vertical .vertical .vertical .horizontal button.flat {
    border-color: @theme_border_color;
}

.eom-window .vertical .vertical .vertical .horizontal button.flat:disabled {
    border-color: @theme_insensitive_border;
}

.eom-window .vertical .vertical .vertical .horizontal scrolledwindow.frame {
    border-width: 2px;
}

